# carrot-clone-backend

./: README.md  db.sqlite3  pyproject.toml  test.json
config/: settings.py  urls.py
dms/: models.py  serializer.py  urls.py  views.py
dms/migrations/: 0001_initial.py  0002_initial.py  0002_message.py  0003_alter_message_room.py  0003_remove_chattingroom_receiver_and_more.py  0004_rename_user_chattingroom_users.py
medias/: models.py  serializer.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_initial.py
notifications/: admin.py  models.py  serializer.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
products/: admin.py  models.py  serializer.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_initial.py  0003_alter_product_buyer.py  0003_product_is_sold.py  0003_product_price.py  0003_product_review_exists.py  0004_alter_product_buyer.py
reviews/: admin.py  models.py  serializer.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_initial.py  0003_alter_review_product_alter_review_user.py  0004_alter_review_product.py  0005_alter_review_user.py  0006_alter_review_product.py
users/: admin.py  models.py  serializer.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar_alter_user_phone_nb.py  0003_user_detailed_address.py  0004_alter_user_address_alter_user_detailed_address_and_more.py  0005_alter_user_address_alter_user_detailed_address.py
wishlists/: models.py
wishlists/migrations/: 0001_initial.py
